# UnityGameLocalizationDemo

./: README.md  settings.gradle
app/: build.gradle
app/release/: app-release.apk  map
app/src/androidTest/java/com/lzy/dobbytest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  inject.cpp  inject_dobby.cpp  inject_inlinehook.cpp  inject_test.cpp  inject_test_dobby.cpp  native-lib.cpp
app/src/main/cpp/Dobby/builtin-plugin/AndroidRestriction/: android_restriction.cc
app/src/main/cpp/Dobby/builtin-plugin/ApplicationEventMonitor/: dynamic_loader_monitor.cc  posix_file_descriptor_operation_monitor.cc
app/src/main/cpp/Dobby/tests/InstructionRelocation/x64/: test_x64_instruction_relocation.cc
app/src/main/cpp/Tools/: common.h  junk.h  tools.cpp  tools.h
app/src/main/cpp/inlineHook/: Android.mk  Application.mk  README.md  inlineHook.c  relocate.c
app/src/main/java/com/lzy/dobbytest/: DeviceUtil.java  MD5Utils.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/lzy/dobbytest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
